# agentid-crewai

./: README.md  pyproject.toml
src/agentid_crewai/: __init__.py  tools.py
tests/: test_tools.py
